--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ flake8 = "^7.0.0"
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
