--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -1,49 +1,31 @@
 name: auto-tests
-run-name: ${{ github.actor }} is testing out GitHub Actions
 
-on: [push]
+ on: [push]
 
-jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+   jobs:
+     build:
+       runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository code
-        uses: actions/checkout@v4
+       steps:
+       - uses: actions/checkout@v2
+       - name: Set up Python
+         uses: actions/setup-python@v2
+         with:
+           python-version: '3.11.8'
+       - name: Install dependencies
+         run: |
+           python -m pip install --upgrade pip
+           pip install -r requirements.txt
+       - name: Lint with flake8
+         run: |
+           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+       - name: Test with pytest
+         run: |
+           pytest --cov=. --cov-report=xml
 
-      - name: Install Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          export PATH="$HOME/.local/bin:$PATH"
-
-      - name: Install dependencies
-        run: poetry install
-
-      - name: Lint with flake8
-        run: poetry run flake8 gendiff
-
-      - name: Run tests
-        run: poetry run pytest tests/test_gendiff.py
-
-      - name: Run tests with coverage
-        run: poetry run pytest tests/test_gendiff.py --cov=gendiff --cov-report=xml --cov-report=term
-
-      - name: List coverage file
-        run: ls -l coverage.xml
-
-      - name: Install CodeClimate test reporter
-        run: |
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-          chmod +x ./cc-test-reporter
-
-      - name: Report coverage to CodeClimate
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        run: |
-          ./cc-test-reporter before-build
-          ./cc-test-reporter format-coverage coverage.xml --input-type coverage.py
-          ./cc-test-reporter upload-coverage
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-      
+       - name: Upload coverage to Code Climate
+         uses: codeclimate/codeclimate-action@v1
+         with:
+           coverage: "coverage.xml"
+           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
