--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -1,31 +1,35 @@
 name: auto-tests
 
- on: [push]
+on:
+  - push
+  - pull_request
 
-   jobs:
-     build:
-       runs-on: ubuntu-latest
-
-       steps:
-       - uses: actions/checkout@v2
-       - name: Set up Python
-         uses: actions/setup-python@v2
-         with:
-           python-version: '3.11.8'
-       - name: Install dependencies
-         run: |
-           python -m pip install --upgrade pip
-           pip install -r requirements.txt
-       - name: Lint with flake8
-         run: |
-           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-       - name: Test with pytest
-         run: |
-           pytest --cov=. --cov-report=xml
-
-       - name: Upload coverage to Code Climate
-         uses: codeclimate/codeclimate-action@v1
-         with:
-           coverage: "coverage.xml"
-           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # we want to test our package on several versions of Python
+        python-version: [3.11.8]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+        # make depends on poetry
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          make install
+      - name: Run linter and pytest
+        run: |
+          make check
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v5.0.0
+        if: github.ref_name == 'main'
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
