--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           pip install poetry
           make install
+          pip install pytest
       - name: Run linter and pytest
         run: |
           make check
