--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["delvan <<anikeev30@yandex.ru>>"]
 readme = "README.md"
 
 packages = [
-    { include = "gendiff" },
+    { include = "gendiff" }
 ]
 
 
@@ -20,6 +20,7 @@ gendiff = "gendiff.scripts.gendiff:main"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.1"
 pyyaml = "^6.0.1"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
