--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         # we want to test our package on several versions of Python
-        python-version: [3.10.12, 3.11.8]
+        python-version: [3.11.8]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           pipx install poetry
+          poetry shell
           make install
           pip install pytest
           pip install pyyaml
