--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -38,4 +38,6 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: make test-coverage
+          coverageLocations: |
+            ${{ github.workspace }}/coverage.xml:coverage.py  
           debug: true
