--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -39,5 +39,5 @@ jobs:
         with:
           coverageCommand: make test-coverage
           coverageLocations: |
-            ${{ github.workspace }}/coverage.xml:coverage.py  
-          debug: true
+            ${{ github.workspace }}/coverage.xml:coverage.py
+          coverageFlags: --add-prefix gendiff/
